[PAVAN]Refactoring: Code
